[gd_scene load_steps=11 format=3 uid="uid://dyyegu4aati6a"]

[ext_resource type="Script" uid="uid://dgbbd4bw71ti5" path="res://game/gd/music_assault_manager.gd" id="1_ilqni"]
[ext_resource type="AudioStream" uid="uid://cues31go5wgsx" path="res://assets/music/Siren Rush/Stealth Phase 1.mp3" id="2_6jhv8"]
[ext_resource type="AudioStream" uid="uid://b3st5kbl1eimy" path="res://assets/music/Siren Rush/Stealth Phase 2.mp3" id="3_v61gc"]
[ext_resource type="AudioStream" uid="uid://4j32sp3kv1b1" path="res://assets/music/Siren Rush/Control.mp3" id="4_y8egf"]
[ext_resource type="AudioStream" uid="uid://sond3jau4ecs" path="res://assets/music/Siren Rush/Anticipation.mp3" id="5_sb5ab"]
[ext_resource type="AudioStream" uid="uid://cn5r50wc26ef" path="res://assets/music/Siren Rush/Assault.mp3" id="6_tiafr"]
[ext_resource type="Script" uid="uid://cmnecon63yc7j" path="res://addons/fpc/phase_banner.gd" id="7_6jhv8"]

[sub_resource type="Theme" id="Theme_v61gc"]

[sub_resource type="SystemFont" id="SystemFont_gv6je"]

[sub_resource type="LabelSettings" id="LabelSettings_y8egf"]
font = SubResource("SystemFont_gv6je")
font_size = 18

[node name="MusicAssaultManager" type="Node"]
script = ExtResource("1_ilqni")
use_stealth2 = true

[node name="AudioPlayer_Stealth1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_6jhv8")

[node name="AudioPlayer_Stealth2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_v61gc")

[node name="AudioPlayer_Control" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_y8egf")

[node name="AudioPlayer_Anticipation" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_sb5ab")

[node name="AudioPlayer_Assault1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_tiafr")

[node name="AudioPlayer_Assault2" type="AudioStreamPlayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PhaseBanner" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 346.0
offset_bottom = 60.0
script = ExtResource("7_6jhv8")

[node name="BannerBG" type="ColorRect" parent="CanvasLayer/PhaseBanner"]
clip_children = 2
layout_mode = 1
offset_left = 448.0
offset_right = 704.0
offset_bottom = 40.0
color = Color(0.174169, 0.357471, 0.501141, 1)

[node name="BannerText1" type="Label" parent="CanvasLayer/PhaseBanner/BannerBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_v61gc")
text = "Stealth in Progress"
label_settings = SubResource("LabelSettings_y8egf")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="BannerText2" type="Label" parent="CanvasLayer/PhaseBanner/BannerBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_v61gc")
text = "Stealth in Progress"
label_settings = SubResource("LabelSettings_y8egf")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
